--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "build": "vite build"
   },
   "dependencies": {
+    "firebase-admin": "^11.4.1",
     "framer-motion": "^7.6.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.6.1"
   },
   "devDependencies": {
     "babel-preset-nano-react-app": "^0.1.0",
